# kOS-theme

./: .gitignore  CHANGELOG.md  HACKING.md  INSTALL.md  README.md  TODO.md  meson.build  meson_options.txt  package-lock.json
deb.in/: control  install
debian/: control.in  rules.in
src/: _theme-color.scss  _theme.scss  meson.build
src/chrome/: meson.build
src/gtk-2.0/: meson.build
src/gtk-3.0/: _common.scss  gtk-dark.scss.in  gtk.scss.in  meson.build
src/gtk-3.0/sass/: _common.scss
src/gtk-3.0/sass/apps/: _budgie.scss  _gnome.scss  _mate.scss  _xfce.scss
src/gtk-4.0/: gtk-dark.scss.in  gtk.scss.in  meson.build
src/gtk-4.0/sass/: _common.scss  _drawing.scss
src/xfwm4/: meson.build
